# langnet

./: .gitignore  .gitmodules  README.md  TODO.md  devenv.nix  justfile  pyproject.toml
frontend/: index.html  justfile  package.json  tailwind.config.js  vite.config.js
frontend/src/: About.svelte  App.svelte  Dummy.svelte  Home.svelte  SearchResults.svelte  main.ts
frontend/src/htmx_templates/: langnet.html.j2
frontend/src/lib/: Search.svelte  SearchForm.svelte
langnet/: datomic.py  diogenes.py  wsgi.py
langnet/flask_app/: __init__.py  api.py  config.py  static.py
langnet/whitakers_words/: core.py
langnet/whitakers_words/lineparsers/: parse_senses.py  parse_term_codes.py  parse_term_facts.py
src-web/: DEVELOP.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
src-web/src/: About.svelte  App.svelte  Home.svelte  SearchResults.svelte
src-web/src/lib/: SearchForm.svelte  storable.ts
src/cltk-playground/: .gitignore  devenv.nix  pyproject.toml
src/cltk-playground/tests/: test_cltk_playground.py
src/langnet/: wsgi.py
src/langnet/classics_toolkit/: README.md  core.py
src/langnet/cltk_playground/: README.md
src/langnet/cologne/: README.md  core.py
src/langnet/diogenes/: README.md  cli_util.py  core.py
src/langnet/engine/: core.py
src/langnet/flask_app/: README.md  api.py  core.py  static.py  svelte.py
src/langnet/flask_app/bp/: api.py  htmx.py  htmx_templates  svelte.py
src/langnet/whitakers_words/: README.md  core.py
src/langnet/whitakers_words/lineparsers/: __init__.py  parse_senses.py  parse_term_codes.py  parse_term_facts.py
tests/: datomic.py  pipeline_example.py  test_cltk_playground.py
tests/example/: cltk_pipeline_example.py  datomic_example.py  whitakers_parsers_example.py  whitakers_words_example.py
webroot/: README.md  index.html
whitaker-stuff/: whitakers_words.py
whitaker-stuff/lark-playground/: justfile  parse_senses.py  parse_term_codes.py  parse_term_facts.py
