[tool.poetry]
name = "langnet"
version = "0.1.0"
description = ""
authors = ["Orpheus <orpheus@computerdream.club>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.9" # matching cltk versions for poetry
cltk = "^1.4.0"
pycdsl = "^0.9.0"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
gunicorn = "^23.0.0"
flask = "^3.1.0"
sh = "^2.2.1"
html5lib = "^1.1"
betacode = "^1.0"
pygtrie = "^2.5.0"
lark = "^1.2.2"
rich = "^13.9.4"

[tool.poetry.group.test.dependencies]
nose2 = "^0.15.1"
expecttest = "^0.3.0"

[tool.poe.env]
PYTHONPATH = "${POE_ROOT}/src:${PYTHONPATH}"
VAR2 = "BAR BAR BLACK ${FARM_ANIMAL}"
EXPECTTEST_ACCEPT = "1"

[tool.poe.tasks]
serve = "gunicorn --chdir=. --access-logfile=- --error-logfile=- -w1 langnet.wsgi:app"
dev.cmd = "flask --app langnet.wsgi:app run --debug"
dev.envfile = "${POE_GIT_DIR}/.dev-envfile"
test.cmd = "nose2 -s tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
