[tool.poetry]
name = "cltk-playground"
version = "0.1.0"
description = ""
authors = ["orpheus <orpheus@computerdream.club>"]
readme = "README.md"
packages = [{include="cltk_playground", from="src"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.9" # matching cltk versions for poetry
cltk = "^1.4.0"
pycdsl = "^0.9.0"

[tool.poe.tasks]
test.cmd = "nose2 -s tests"

[tool.poetry.group.test.dependencies]
nose2 = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
